--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
         <li><b>Аэропортов</b> 241</li>
       </ul>
     </section>
-    <section class="photo-grid">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из поезда">
-      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото из окна самолета">
-      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото с волком">
-      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="фото лес и туман">
-      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фото машина на льду">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото берег">
-      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="фото Эльбруса">
-      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="фото со знаком">
-      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="фото рельеф">
-      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото горы">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото Байкала">
-      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото Горы в тумане">
-    </section>
+    <ul class="photo-grid">
+      <li class="photo-grid__item"><img class="photo-grid__img"  src="./images/photo-grid-train.jpg" alt="фото из поезда"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото из окна самолета"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-tuman.jpg" alt="фото с волком"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-sochi.jpg" alt="фото лес и туман"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-arisa.jpg" alt="фото машина на льду"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-baikal.jpg" alt="фото берег"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-elbrus.jpg" alt="фото Эльбруса"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-kondratiev.jpg" alt="фото со знаком"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-kamchatka-1.jpg" alt="фото рельеф"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-kamchatka-2.jpg" alt="фото горы"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-baikal-2.jpg" alt="фото Байкала"></li>
+      <li class="photo-grid__item"><img class="photo-grid__img" src="./images/photo-grid-ergaki.jpg" alt="фото Горы в тумане"></li>
+    </ul>
 
   </div>
 </body>
