--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
           <p class="place__url-headlink">URL</p>
-          <a class="place__link" href="">park-kosa.ru</a>
+          <a class="place__link" href="http://park-kosa.ru" target="blanc">park-kosa.ru</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн,
@@ -93,7 +93,7 @@
         <h3 class="place__title">Кольский</h3>
         <div class="place__website">
           <p class="place__url-headlink">URL</p>
-          <a class="place__link" href="">National Geographic</a>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="blanc">National Geographic</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -112,7 +112,7 @@
         <h3 class="place__title">Алтай</h3>
         <div class="place__website">
           <p class="place__url-headlink">URL</p>
-          <a class="place__link" href="">Facebook</a>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="blanc">Facebook</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
@@ -130,7 +130,7 @@
         <h3 class="place__title">Зимний Байкал</h3>
         <div class="place__website">
           <p class="place__url-headlink">URL</p>
-          <a class="place__link" href="">https://vk.com/baikalmile</a>
+          <a class="place__link" href="https://vk.com/baikalmile" target="blanc">https://vk.com/baikalmile</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
@@ -148,7 +148,7 @@
         <h3 class="place__title">Карелия</h3>
         <div class="place__website">
           <p class="place__url-headlink">URL</p>
-          <a class="place__link" href="">http://vodlozero.ru/</a>
+          <a class="place__link" href="http://vodlozero.ru" target="blanc">http://vodlozero.ru/</a>
         </div>
       <div class="place__text">
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
@@ -159,19 +159,21 @@
     </section>
 
     <section class="cover">
-      <a class="" href="" target="blanc">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blanc">
+        <div class="cover__image">
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </div>
       </a>
     </section>
 
     <footer class="footer">
       <div class="footer__links">
-        <a class="footer__link" href="">Карты</a>
-        <a class="footer__link" href="">Погода</a>
-        <a class="footer__link" href="">Расписание</a>
-        <a class="footer__link" href="">Календарь</a>
-        <a class="footer__link" href="">Путешествия</a>
+        <a class="footer__link" href="https://yandex.ru/maps" target="blanc">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda" target="blanc">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru" target="blanc">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru" target="blanc">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru" target="blanc">Путешествия</a>
       </div>
       <p class="footer__copyright">© 2020. Эвелина Эткеева</p>
     </footer>
