--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><p class="intro__list-item"><span class="intro__list-item_bold">Часовых поясов</span> 11</p></li>
           <li><p class="intro__list-item"><span class="intro__list-item_bold">Объектов природного наследия ЮНЕСКО</span> 12</p></li>
           <li><p class="intro__list-item"><span class="intro__list-item_bold">Объектов культурного наследия ЮНЕСКО</span> 16</p></li>
-          <li><p class="intro__list-item"><span class="intro__list-item_bold"></span>Природных заповедников 105</p></li>
+          <li><p class="intro__list-item"><span class="intro__list-item_bold">Природных заповедников</span> 105</p></li>
           <li><p class="intro__list-item"><span class="intro__list-item_bold">Аэропортов</span> 241</p></li>
         </ul>
       </article>
