--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="lead__title">Путешествия  по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-          <img class="lead__image" src="../russian-travel/images/lead-polka.jpg" alt="маршрут путешествия">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="маршрут путешествия">
           <figcaption class="lead__figcaption"><p class="lead__caption">ваша полка — верхняя</p></figcaption>
         </figure>
       </section>
