after-second-review

--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
           <li><a class="footer__link" href="https://travel.yandex.ru" target="blanc">Путешествия</a></li>
         </ul>
       </nav>
-      <p class="footer__copyright">© 2020. Эвелина Эткеева</p>
+      <p class="footer__copyright">© 2021. Эвелина Эткеева</p>
     </footer>
   </div>
 </body>
 </html>
+
+<!--Спасибо за просмотр!-->
